remove project.departments idx